--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@ footer:before{
        </a>
              
              
-      <a href="newback.html" class="card">         
-      <img   src="https://images2.imgbox.com/37/cc/Pvy3Fx8S_o.jpg" alt="">  
+      <a href="green.html" class="card">         
+      <img   src="https://images2.imgbox.com/32/43/KitzmAig_o.jpg" alt="">  
         <div class="info">
        <h3>back end</h3>
        <p>Css</p>
