--- a/lightgreen.html
+++ b/lightgreen.html
@@ -626,7 +626,8 @@ font-size: 12px;
   margin-bottom: 0;
 }
 .recent .right .post img{
-  min-height: 100%;
+  height:100%;
+  width:100%;
 }
 @media (max-width:512px){
   .recent{
