--- a/lightgreen.html
+++ b/lightgreen.html
@@ -640,7 +640,8 @@ font-size: 12px;
   }
   .recent .left{
     width: 90%;
-    margin-bottom: 20px;
+
+       margin: 20px auto;
   }
   .recent .right  {
     width: 90%;
