--- a/lightgreen.html
+++ b/lightgreen.html
@@ -856,7 +856,7 @@ font-size: 12px;
       <div class="container">
     <div class="contact">
        <i class="fa fa-search"></i>New Yorks
-      <i class="fa fa-phone"></i>1-123-456-7890
+      <i class="fa fa-phone"></i>123-456-7890
       <i class="fa fa-envelope"></i>wpsupport@prodesgns.com
     </div>
     
