--- a/index.html
+++ b/index.html
@@ -520,15 +520,15 @@ footer:before{
       <img   src="https://images2.imgbox.com/32/f7/BWnjqRrE_o.jpg" alt="">  
         <div class="info">
        <h3>RWD Website</h3>
-       <p>Html Css jQuery</p>
+       <p>Html Css js</p>
         </div>                
        </a>
              
                     <a href="generator.html" class="card">         
       <img   src="https://images2.imgbox.com/ea/7c/hLURfjVx_o.jpg" alt="">  
         <div class="info">
-       <h3>RWD Website</h3>
-       <p>Html Css jQuery</p>
+       <h3>身份證字號產生</h3>
+       <p>javascript</p>
         </div>                
        </a>
              
